--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
 
       <section id="hero">
-        <h1>ROD Consulting<span>Ingeniería Eléctrica</span></h1>
+        <h1 class="text-3xl font-bold underline">ROD Consulting<span>Ingeniería Eléctrica</span></h1>
       </section>
 
       <section id="services">
