--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
     <div class="container fs-5">
 
-      <div class="row py-4">
+      <div class="row">
 
         <div class="col-6">
-          <img src="./assets/Imagotipo--300.png" height="150px" alt="Imagotipo ROD Consulting">
+          <img src="./assets/Imagotipo--300.png" height="60px" alt="Imagotipo ROD Consulting">
         </div>
 
         <div class="col-3">
 
-          <div class="row g-0">
+          <div class="row g-0 py-3">
 
-            <div class="col-md-2">
+            <div class="col-md-2 ">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp"
                 viewBox="0 0 16 16">
                 <path
@@ -47,7 +47,7 @@
 
         <div class="col-3">
 
-          <div class="row g-0">
+          <div class="row g-0 py-3">
 
             <div class="col-md-2">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -58,7 +58,7 @@
             </div>
 
             <div class="col-md-10">
-              <p>Contactenos</p>
+              <p >Contactenos</p>
               <a href="tel:+573122363">+573122363</a>
             </div>
 
@@ -72,7 +72,7 @@
 
   </header>
 
-  <nav class="navbar sticky-top navbar-expand-lg bg-light fs-3 py-3">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary fs-3 py-1">
 
     <div class="container-fluid position-relative">
 
@@ -87,13 +87,19 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item ms-3">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Servicios</a>
           </li>
           <li class="nav-item ms-3">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Conocenos</a>
           </li>
           <li class="nav-item ms-3">
-            <a class="nav-link" href="#">Disabled</a>
+            <a class="nav-link" href="#">Proyectos</a>
+          </li>
+          <li class="nav-item ms-3">
+            <a class="nav-link" href="#">Conocenos</a>
+          </li>
+          <li class="nav-item ms-3">
+            <a class="nav-link" href="#">Contacto</a>
           </li>
         </ul>
       </div>
