Feature: navba basic structurer

--- a/index.html
+++ b/index.html
@@ -13,16 +13,44 @@
 
   <header>
 
-    <nav>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Servicios</a></li>
-        <li><a href=""></a>Conocenos</li>
-        <li><a href=""></a>Proyectos</li>
-        <li><a href=""></a>Contacto</li>
-      </ul>
-    </nav>
+    <div class="top-header py-4 container fs-1">
+      ROD Consulting
+    </div>
+
   </header>
+
+    <nav class="navbar sticky-top navbar-expand-lg bg-light fs-1 py-3">
+
+      <div class="container-fluid position-relative">
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item ms-3">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item ms-3">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item ms-3">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item ms-3">
+              <a class="nav-link" href="#">Disabled</a>
+            </li>
+          </ul>
+        </div>
+        
+      </div>
+
+    </nav>
+
+
+
 
   <main>
 
@@ -30,27 +58,26 @@
       <h1 class="text-3xl font-bold underline">ROD Consulting<span>Ingeniería Eléctrica</span></h1>
     </section>
 
-    <section id="services">
+    <section  class="container-fluid min-vh-100" id="services">
       <ul>
         <li>Servicio </li>
         <li>Servicio </li>
         <li>Servicio </li>
         <li>Servicio </li>
         <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
+
       </ul>
     </section>
 
-    <section id="works">
+    <section  class="container-fluid min-vh-100" id="services">
+      <ul>
+        <li>Servicio </li>
+        <li>Servicio </li>
+        <li>Servicio </li>
+        <li>Servicio </li>
+        <li>Servicio </li>
 
-    </section>
-
-    <section id="contact">
-
+      </ul>
     </section>
 
   </main>
