--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
 
 <body>
 
-  <header>
+  <header class="py-2">
 
-    <div class="container fs-5">
+    <div class="container-fluid fs-5">
 
       <div class="row">
 
-        <div class="col-6">
-          <img src="./assets/Imagotipo--300.png" height="60px" alt="Imagotipo ROD Consulting">
+        <div class="col-6 position-relative">
+          <img class="position-absolute top-50 start-50 translate-middle" src="./assets/Imagotipo--300.png" height="100%x" alt="Imagotipo ROD Consulting">
         </div>
 
-        <div class="col-3">
+
+
+        <div class="col-2 h-50">
 
           <div class="row g-0 py-3">
 
-            <div class="col-md-2 ">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-whatsapp"
+            <div class="col-md-2 position-relative">
+              <svg class="position-absolute top-50 start-0 translate-middle" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-whatsapp"
                 viewBox="0 0 16 16">
                 <path
                   d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
@@ -35,22 +37,20 @@
             </div>
 
             <div class="col-md-10">
-              <p>Contactenos</p>
-              <a href="tel:+573122363">+573122363</a>
+              <p class="m-0">Contactenos</p>
+              <a class="m-0" href="tel:+573122363">+573122363</a>
             </div>
 
           </div>
 
         </div>
 
-
-
-        <div class="col-3">
+        <div class="col-2 h-50">
 
           <div class="row g-0 py-3">
 
-            <div class="col-md-2">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <div class="col-md-2 position-relative">
+              <svg class="position-absolute top-50 start-0 translate-middle" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
                 class="bi bi-envelope-paper" viewBox="0 0 16 16">
                 <path
                   d="M4 0a2 2 0 0 0-2 2v1.133l-.941.502A2 2 0 0 0 0 5.4V14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V5.4a2 2 0 0 0-1.059-1.765L14 3.133V2a2 2 0 0 0-2-2H4Zm10 4.267.47.25A1 1 0 0 1 15 5.4v.817l-1 .6v-2.55Zm-1 3.15-3.75 2.25L8 8.917l-1.25.75L3 7.417V2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v5.417Zm-11-.6-1-.6V5.4a1 1 0 0 1 .53-.882L2 4.267v2.55Zm13 .566v5.734l-4.778-2.867L15 7.383Zm-.035 6.88A1 1 0 0 1 14 15H2a1 1 0 0 1-.965-.738L8 10.083l6.965 4.18ZM1 13.116V7.383l4.778 2.867L1 13.117Z" />
@@ -58,7 +58,7 @@
             </div>
 
             <div class="col-md-10">
-              <p >Contactenos</p>
+              <p class="m-0">Contactenos</p>
               <a href="tel:+573122363">+573122363</a>
             </div>
 
@@ -74,7 +74,7 @@
 
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary fs-3 py-1">
 
-    <div class="container-fluid position-relative">
+    <div class="container-fluid">
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,22 +83,19 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item ms-3">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <li class="nav-item mx-3">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item ms-3">
+          <li class="nav-item mx-4">
             <a class="nav-link" href="#">Servicios</a>
           </li>
-          <li class="nav-item ms-3">
-            <a class="nav-link" href="#">Conocenos</a>
-          </li>
-          <li class="nav-item ms-3">
+          <li class="nav-item mx-4">
             <a class="nav-link" href="#">Proyectos</a>
           </li>
-          <li class="nav-item ms-3">
+          <li class="nav-item mx-4">
             <a class="nav-link" href="#">Conocenos</a>
           </li>
-          <li class="nav-item ms-3">
+          <li class="nav-item mx-4">
             <a class="nav-link" href="#">Contacto</a>
           </li>
         </ul>
@@ -107,8 +104,6 @@
     </div>
 
   </nav>
-
-
 
 
   <main>
