--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- HEADER -->
   <header class="py-2">
 
-    <div class="container-fluid fs-5">
+    <div class="container-fluid fs-6">
 
       <div class="row">
 
@@ -72,7 +72,7 @@
   </header>
 
   <!-- NAVBAR -->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary fs-3 py-1">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary fs-4 py-1">
 
     <div class="container-fluid">
 
@@ -118,8 +118,8 @@
             <h1 class="text-uppercase fw-semibold display-1">ROD CONSULTING</h1>
             <h5 class="mt-3 mb-4">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
             <div>
-              <a href="#" class="btn btn-primary me-2">Sobre Nosotros</a>
-              <a href="#" class="btn btn-primary ms-2">Servicios</a>
+              <a href="#" class="btn btn-primary">Sobre Nosotros</a>
+              <a href="#" class="btn btn-primary">Servicios</a>
             </div>
           </div>
         </div>
