--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item mx-3">
-            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="#">Servicios</a>
+            <a class="nav-link active" href="#">Servicios</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="#">Proyectos</a>
+            <a class="nav-link active" href="#">Proyectos</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="#">Conocenos</a>
+            <a class="nav-link active" href="#">Conocenos</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link active" href="#">Contacto</a>
           </li>
         </ul>
       </div>
@@ -108,18 +108,18 @@
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="hero min-vh-100 d-flex align-items-center text-center pt-4">
-      <div class="container-fluid align-self-start">
+    <section id="hero" class="hero hero-background min-vh-100 d-flex align-items-center text-center">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <img src="./assets/Isotipo--300.png" alt="Imagotipo ROD Consulting">
           </div>
           <div class="col-12">
-            <h1 class="text-uppercase fw-semibold display-1">ROD CONSULTING</h1>
-            <h5 class="mt-3 mb-4">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
+            <h1 class="text-uppercase fw-semibold display-1 text-white">ROD CONSULTING</h1>
+            <h5 class="mt-3 mb-4 text-white">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
             <div>
-              <a href="#" class="btn btn-primary">Sobre Nosotros</a>
-              <a href="#" class="btn btn-primary">Servicios</a>
+              <a href="#" class="btn btn-primary me-2">Sobre Nosotros</a>
+              <a href="#" class="btn btn-primary ms-2">Servicios</a>
             </div>
           </div>
         </div>
