--- a/index.html
+++ b/index.html
@@ -108,18 +108,25 @@
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="hero hero-background min-vh-100 d-flex align-items-center text-center">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <img src="./assets/Isotipo--300.png" alt="Imagotipo ROD Consulting">
-          </div>
-          <div class="col-12">
-            <h1 class="text-uppercase fw-semibold display-1 text-white">ROD CONSULTING</h1>
-            <h5 class="mt-3 mb-4 text-white">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
-            <div>
-              <a href="#" class="btn btn-primary me-2">Sobre Nosotros</a>
-              <a href="#" class="btn btn-primary ms-2">Servicios</a>
+    <section id="hero" class="hero hero-background min-vh-100 position-relative">
+      
+      <video class="hero-video position-absolute" autoplay muted loop id="myVideo">
+        <source src="./assets/img/background/compress.m4v" type="video/mp4">
+      </video>
+
+      <div class="d-flex align-items-center text-center">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <img src="./assets/Isotipo--300.png" alt="Imagotipo ROD Consulting">
+            </div>
+            <div class="col-12">
+              <h1 class="text-uppercase fw-semibold display-1 text-white">ROD CONSULTING</h1>
+              <h5 class="mt-3 mb-4 text-white">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
+              <div>
+                <a href="#" class="btn btn-primary me-2">Sobre Nosotros</a>
+                <a href="#" class="btn btn-primary ms-2">Servicios</a>
+              </div>
             </div>
           </div>
         </div>
