--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
         <source src="./assets/img/background/compress.m4v" type="video/mp4">
       </video>
 
+      <div class="hero-video-filter"></div>
+
       <div class="d-flex align-items-center text-center">
         <div class="container-fluid">
           <div class="row">
@@ -121,7 +123,7 @@
               <img src="./assets/Isotipo--300.png" alt="Imagotipo ROD Consulting">
             </div>
             <div class="col-12">
-              <h1 class="text-uppercase fw-semibold display-1 text-white">ROD CONSULTING</h1>
+              <h1 class="hero-title text-uppercase fw-semibold display-1 text-white">ROD CONSULTING</h1>
               <h5 class="mt-3 mb-4 text-white">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
               <div>
                 <a href="#" class="btn btn-primary me-2">Sobre Nosotros</a>
