--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="hero hero-background min-vh-100 position-relative">
+    <section id="hero" class="hero hero-background min-vh-100 position-relative section-padding">
 
       <video class="hero-video position-absolute" autoplay muted loop id="myVideo">
         <source src="./assets/img/background/compress.m4v" type="video/mp4">
@@ -117,7 +117,7 @@
 
       <div class="hero-video-filter"></div>
 
-      <div class="d-flex align-items-center text-center">
+      <div class="d-flex align-items-center text-center position-absolute top-50 start-50 translate-middle">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
