--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
@@ -21,8 +21,6 @@
           <img class="position-absolute top-50 start-50 translate-middle" src="./assets/Imagotipo--300.png"
             height="100%x" alt="Imagotipo ROD Consulting">
         </div>
-
-
 
         <div class="col-2 h-50">
 
@@ -67,7 +65,6 @@
         </div>
 
       </div>
-
     </div>
 
   </header>
@@ -83,25 +80,32 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNav">
+
         <ul class="navbar-nav mx-auto">
+
           <li class="nav-item mx-3">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
+
           <li class="nav-item mx-4">
             <a class="nav-link active" href="#">Servicios</a>
           </li>
+
           <li class="nav-item mx-4">
             <a class="nav-link active" href="#">Proyectos</a>
           </li>
+
           <li class="nav-item mx-4">
             <a class="nav-link active" href="#about">Conocenos</a>
           </li>
+
           <li class="nav-item mx-4">
             <a class="nav-link active" href="#">Contacto</a>
           </li>
-        </ul>
-      </div>
 
+        </ul>
+
+      </div>
     </div>
 
   </nav>
@@ -109,7 +113,7 @@
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="hero hero-background min-vh-100 position-relative section-padding">
+    <section id="hero" class="hero hero-background min-vh-100 position-relative">
 
       <video class="hero-video position-absolute" autoplay muted loop id="myVideo">
         <source src="./assets/img/background/compress.m4v" type="video/mp4">
@@ -118,26 +122,34 @@
       <div class="hero-video-filter"></div>
 
       <div class="d-flex align-items-center text-center position-absolute top-50 start-50 translate-middle">
+
         <div class="container-fluid">
+
           <div class="row">
+
             <div class="col-12">
               <img src="./assets/Isotipo--300.png" alt="Imagotipo ROD Consulting">
             </div>
+
             <div class="col-12">
               <h1 class="hero-title text-uppercase fw-semibold display-1 text-white">ROD CONSULTING</h1>
               <h5 class="mt-3 mb-4 text-white">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
+
               <div>
                 <a href="#" class="btn btn-primary me-2">Sobre Nosotros</a>
                 <a href="#" class="btn btn-primary ms-2">Servicios</a>
               </div>
+
             </div>
           </div>
+
         </div>
       </div>
+      
     </section>
 
     <!-- ABOUT -->
-    <section id="about" class="section-padding">
+    <section id="about">
 
       <div class="container">
 
@@ -153,7 +165,9 @@
           </div>
 
         </div>
+
         <div class="row justify-content-between align-items-center">
+
           <div class="col-lg-6">
             <img class="about-image" src="./assets/img/about.jpg" alt="A picture About us">
           </div>
@@ -161,7 +175,6 @@
           <div class="col-lg-5">
 
             <div class="d-flex pt-4 mb-3">
-
               <div class="iconbox me-4">
                 <i class="ri-mail-send-fill"></i>
               </div>
@@ -170,7 +183,6 @@
                 <h5>We are Awesome</h5>
                 <p>Consectetur adipisicing elit. Corporis nesciunt aut temporibus!</p>
               </div>
-
             </div>
 
             <div class="d-flex mb-3">
@@ -182,6 +194,7 @@
                 <p>Consectetur adipisicing elit. Corporis nesciunt aut temporibus!</p>
               </div>
             </div>
+
             <div class="d-flex">
               <div class="iconbox me-4">
                 <i class="ri-rocket-2-fill"></i>
@@ -191,8 +204,10 @@
                 <p>Consectetur adipisicing elit. Corporis nesciunt aut temporibus!</p>
               </div>
             </div>
+
           </div>
         </div>
+
       </div>
     </section>
 
@@ -233,3 +248,4 @@
 </body>
 
 </html>
+
