Feature: Services section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         </div>
       </div>
-      
+
     </section>
 
     <!-- ABOUT -->
@@ -211,17 +211,116 @@
       </div>
     </section>
 
+    <!-- SERVICES -->
+    <section id="services" class="border-top">
 
-    <section class="container-fluid min-vh-100" id="services">
-      <ul>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
+      <div class="container">
 
-      </ul>
+        <div class="row">
+
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">Portafolio de Servicios</h1>
+              <div class="section-title-line"></div>
+              <p>¿Tienes un proyecto en el que podamos ayudar?</p>
+            </div>
+          </div>
+
+          <div class="row g-4 text-center">
+
+            <div class="col-lg-4 col-sm-6">
+              <div class="service-card box-shadow p-lg-5 p-4">
+
+                <div class="iconbox">
+                  <i class="ri-pen-nib-fill"></i>
+                </div>
+                <!-- DISEÑO -->
+                <h5 class="mt-4 mb-3">Diseño eléctrico residencial, comercial e Indusrial</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
+
+              </div>
+            </div>
+            
+
+            <div class="col-lg-4 col-sm-6">
+              <div class="service-card box-shadow p-lg-5 p-4">
+
+                <div class="iconbox">
+                  <i class="ri-pen-nib-fill"></i>
+                </div>
+                <!-- CONSTRUCCION -->
+                <h5 class="mt-4 mb-3">Construcción de instalaciones eléctricas</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-6">
+              <div class="service-card box-shadow p-lg-5 p-4">
+
+                <div class="iconbox">
+                  <i class="ri-pen-nib-fill"></i>
+                </div>
+                <!-- CONSULTORIA -->
+                <h5 class="mt-4 mb-3">Consultoría técnica en Ingeniería</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-6">
+              <div class="service-card box-shadow p-lg-5 p-4">
+
+                <div class="iconbox">
+                  <i class="ri-pen-nib-fill"></i>
+                </div>
+                <!-- ESTUDIOS -->
+                <h5 class="mt-4 mb-3">Estudios eléctricos, análisis y mediciones</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-6">
+              <div class="service-card box-shadow p-lg-5 p-4">
+
+                <div class="iconbox">
+                  <i class="ri-pen-nib-fill"></i>
+                </div>
+                <!-- MANTENIMIENTO -->
+                <h5 class="mt-4 mb-3">Mantenimiento de instalaciones y equipos</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-6">
+              <div class="service-card box-shadow p-lg-5 p-4">
+
+                <div class="iconbox">
+                  <i class="ri-pen-nib-fill"></i>
+                </div>
+                <!-- COMUNICACIONES -->
+                <h5 class="mt-4 mb-3">Smart home, comunicaciones, seguridad y CCTV.</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+
+
+
+
+
+
     </section>
+
+
 
     <section class="container-fluid min-vh-100" id="services">
       <ul>
@@ -248,4 +347,3 @@
 </body>
 
 </html>
-
