--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
 
     <!-- ABOUT -->
-    <section id="about">
+    <section id="about" class="min-vh-100">
 
       <div class="container">
 
@@ -212,7 +212,7 @@
     </section>
 
     <!-- SERVICES -->
-    <section id="services" class="border-top">
+    <section id="services" class="min-vh-100 border-top">
 
       <div class="container">
 
@@ -325,20 +325,20 @@
       <div class="container text-center">
         <div class="row g-4">
           <div class="col-lg-3 col-sm-6">
-            <h1 class="text-white display-4">90,00+</h1>
-            <h6 class="text-uppercase mb-0 text-white mt-3">Total Downloads</h6>
+            <h1 class="text-white display-4">100%</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">Excelencia y calidad</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1 class="text-white display-4">58K+</h1>
-            <h6 class="text-uppercase mb-0 text-white mt-3">Trusted Clients</h6>
+            <h1 class="text-white display-4">100%</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">Seguridad & Cumplimiento</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1 class="text-white display-4">5M+</h1>
-            <h6 class="text-uppercase mb-0 text-white mt-3">THemes Designed</h6>
+            <h1 class="text-white display-4">500+</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">Proyectos Exitosos</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1 class="text-white display-4">100+</h1>
-            <h6 class="text-uppercase mb-0 text-white mt-3">Team Members</h6>
+            <h1 class="text-white display-4">10+</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">Años de Experiencia</h6>
           </div>
         </div>
       </div>
