--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </li>
 
           <li class="nav-item mx-4">
-            <a class="nav-link active" href="#">Servicios</a>
+            <a class="nav-link active" href="#services">Servicios</a>
           </li>
 
           <li class="nav-item mx-4">
