--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
               </div>
             </div>
-            
+
 
             <div class="col-lg-4 col-sm-6">
               <div class="service-card box-shadow p-lg-5 p-4">
@@ -261,8 +261,8 @@
                 <div class="iconbox">
                   <i class="ri-pen-nib-fill"></i>
                 </div>
-                <!-- CONSULTORIA -->
-                <h5 class="mt-4 mb-3">Consultoría técnica en Ingeniería</h5>
+                <!-- Consultoria -->
+                <h5 class="mt-4 mb-3">Construcción de instalaciones eléctricas</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
 
               </div>
@@ -318,6 +318,30 @@
 
 
 
+    </section>
+
+    <!-- COUNTER -->
+    <section id="counter" class="counter">
+      <div class="container text-center">
+        <div class="row g-4">
+          <div class="col-lg-3 col-sm-6">
+            <h1 class="text-white display-4">90,00+</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">Total Downloads</h6>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <h1 class="text-white display-4">58K+</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">Trusted Clients</h6>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <h1 class="text-white display-4">5M+</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">THemes Designed</h6>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <h1 class="text-white display-4">100+</h1>
+            <h6 class="text-uppercase mb-0 text-white mt-3">Team Members</h6>
+          </div>
+        </div>
+      </div>
     </section>
 
 
