Style: shadow for navbar

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </header>
 
   <!-- NAVBAR -->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary fs-4">
+  <nav class="navbar sticky-top box-shadow navbar-expand-lg navbar-dark bg-primary fs-4">
 
     <div class="container-fluid">
 
