--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./scss/custom.scss">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="stylesheet" href="./node_modules/@fancyapps/ui/dist/fancybox.css">
   <title>Vite App</title>
 </head>
 
@@ -226,7 +227,7 @@
             </div>
           </div>
 
-          <div class="row g-4 text-center">
+          <div class="row text-center">
 
             <div class="col-lg-4 col-sm-6">
               <div class="service-card box-shadow p-lg-5 p-4">
@@ -344,18 +345,85 @@
       </div>
     </section>
 
+    <!-- PROJECTS -->
+    <section id="portfolio" class="min-vh-100">
+      
+      <div class="container">
+        <!-- SECTION TITLE -->
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">Proyectos Recientes</h1>
+              <div class="line"></div>
+              <p>Explore nuestro portafolio para ver algunos ejemplos de nuestros proyectos</p>
+            </div>
+          </div>
+        </div>
 
+        <div class="row g-4">
 
-    <section class="container-fluid min-vh-100" id="services">
-      <ul>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
-        <li>Servicio </li>
+          <div class="col-md-4" >
+            <div class="portfolio-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/img/project-1.jpg" alt="">
+              </div>
+              <a href="./assets/img/project-1.jpg" data-fancybox="gallery" class="iconbox"><i
+                  class="ri-search-2-line"></i></a>
+            </div>
+            <div class="portfolio-item image-zoom mt-4">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/img/project-2.jpg" alt="">
+              </div>
+              <a href="./assets/img/project-2.jpg" data-fancybox="gallery" class="iconbox"><i
+                  class="ri-search-2-line"></i></a>
+            </div>
+          </div>
 
-      </ul>
+          <div class="col-md-4">
+            <div class="portfolio-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/img/project-3.jpg" alt="">
+              </div>
+              <a href="./assets/img/project-3.jpg" data-fancybox="gallery" class="iconbox"><i
+                  class="ri-search-2-line"></i></a>
+            </div>
+            <div class="portfolio-item image-zoom mt-4">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/img/project-4.jpg" alt="">
+              </div>
+              <a href="./assets/img/project-4.jpg" data-fancybox="gallery" class="iconbox"><i
+                  class="ri-search-2-line"></i></a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="portfolio-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/img/project-5.jpg" alt="">
+              </div>
+              <a href="./assets/img/project-5.jpg" data-fancybox="gallery" class="iconbox"><i
+                  class="ri-search-2-line"></i></a>
+            </div>
+            <div class="portfolio-item image-zoom mt-4">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/img/project-6.jpg" alt="">
+              </div>
+              <a href="./assets/img/project-6.jpg" data-fancybox="gallery" class="iconbox"><i
+                  class="ri-search-2-line"></i></a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
     </section>
+
+
+
+
+
+
+
 
   </main>
 
@@ -367,6 +435,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+  <script src="./node_modules/@fancyapps/ui/dist/fancybox.umd.js"></script>
 
 </body>
 
