Feature: Carousel for clients section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="hero hero-background min-vh-100 position-relative">
+    <section id="hero" class="hero hero-background min-vh-100 position-relative py-4">
 
       <video class="hero-video position-absolute" autoplay muted loop id="myVideo">
         <source src="./assets/img/background/compress.m4v" type="video/mp4">
@@ -418,13 +418,48 @@
       </div>
     </section>
 
+    <!-- ClIENTES -->
+    <section>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">Nuestros Clientes</h1>
+              <div class="section-title-line"></div>
+            </div>
+          </div>
+        </div>
+
+        <div id="mainCarousel" class="carousel">
+          <div class="carousel__slide">
+            <img data-lazy-src="https://lipsum.app/id/1/1200x675" />
+          </div>
+          <div class="carousel__slide">
+            <img data-lazy-src="https://lipsum.app/id/2/1200x675" />
+          </div>
+          <div class="carousel__slide">
+            <img data-lazy-src="https://lipsum.app/id/3/1200x675" />
+          </div>
+          <div class="carousel__slide">
+            <img data-lazy-src="https://lipsum.app/id/4/1200x675" />
+          </div>
+          <div class="carousel__slide">
+            <img data-lazy-src="https://lipsum.app/id/5/1200x675" />
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
 
 
 
   </main>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white">
+  <footer class="bg-dark text-white py-4">
 
     <div class="footer-top mb-2">
       <div class="container">
@@ -437,7 +472,8 @@
           <div class="col-lg-3 col-sm-6">
             <h5 class="mb-0">ROD CONSULTING</h5>
             <div class="line"></div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptatum ducimus est vel voluptates</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptatum ducimus est vel voluptates
+            </p>
           </div>
 
           <div class="col-lg-3 col-sm-6">
@@ -466,13 +502,13 @@
       </div>
     </div>
 
-    <div class="footer-bottom py-3">      
-        <div class="container text-center">
-          <p class="mb-0">ROD Consulting Ingenieria Eléctrica © 2022</p>
-        </div>
-        <div class="container text-center">
-          <p class="mb-0">Web design By <a href="https://github.com/cmarioep">@cmarioep</a></p>
-        </div>
+    <div class="footer-bottom py-3">
+      <div class="container text-center">
+        <p class="mb-0">ROD Consulting Ingenieria Eléctrica © 2022</p>
+      </div>
+      <div class="container text-center">
+        <p class="mb-0">Web design By <a href="https://github.com/cmarioep">@cmarioep</a></p>
+      </div>
     </div>
 
   </footer>
