Fix: about img with on mobile devices

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
       <div class="row">
 
-        <div class="col-6 position-relative">
-          <img class="position-absolute top-50 start-50 translate-middle" src="./assets/Imagotipo--300.png"
-            height="100%x" alt="Imagotipo ROD Consulting">
+        <div class="header-logo col-6 position-relative">
+          <img class="position-absolute top-50 start-50 translate-middle" src="./assets/Imagotipo--300.png" alt="Imagotipo ROD Consulting">
         </div>
 
         <div class="col-2 h-50">
