Feature: responsive carousel images

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     </section>
 
     <!-- PROJECTS -->
-    <section id="portfolio" class="min-vh-100">
+    <section id="portfolio">
 
       <div class="container">
         <!-- SECTION TITLE -->
@@ -418,7 +418,7 @@
     </section>
 
     <!-- ClIENTES -->
-    <section>
+    <section class="border-top">
 
       <div class="container">
         <div class="row">
