Sytle: responsive hero-content

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <main>
 
     <!-- HERO -->
-    <section id="hero" class="hero hero-background min-vh-100 position-relative py-4">
+    <section id="hero" class="hero hero-background min-vh-100 position-relative">
 
       <video class="hero-video position-absolute" autoplay muted loop id="myVideo">
         <source src="./assets/img/background/compress.m4v" type="video/mp4">
@@ -121,13 +121,13 @@
 
       <div class="hero-video-filter"></div>
 
-      <div class="d-flex align-items-center text-center position-absolute top-50 start-50 translate-middle">
+      <div class="hero-content text-center">
 
         <div class="container-fluid">
 
           <div class="row">
 
-            <div class="col-12">
+            <div class="hero-content-logo col-12">
               <img src="./assets/Isotipo--300.png" alt="Imagotipo ROD Consulting">
             </div>
 
