--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
               <h5 class="mt-3 mb-4 text-white">Ingeniería Eléctrica, Diseño, Construcción y Consultoría</h5>
 
               <div>
-                <a href="#services" class="btn btn-primary me-2">Nuestros Servicios</a>
-                <a href="#" class="btn btn-primary ms-2">Contáctenos</a>
+                <a href="#services" class="btn btn-primary m-2">Nuestros Servicios</a>
+                <a href="https://wa.link/rftxys" class="btn btn-primary m-2">Contáctenos</a>
               </div>
 
             </div>
