--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse bdg" id="navbarNav">
 
         <ul class="navbar-nav mx-auto">
 
