--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
   <!-- NAVBAR -->
   <nav class="navbar sticky-top box-shadow navbar-expand-lg navbar-dark bg-primary fs-4">
 
-    <div class="container-fluid">
+    <div class="navbar-menu container-fluid">
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse bdg" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
 
         <ul class="navbar-nav mx-auto">
 
-          <li class="nav-item mx-3">
+          <li class="nav-item mx-4">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
 
