Feature: animations on scroll

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="row">
 
-          <div class="col-12 text-center">
+          <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
             <div class="section-title">
               <h1 class="display-4 fw-semibold">Quiénes somos</h1>
               <div class="section-title-line"></div>
@@ -168,11 +168,11 @@
 
         <div class="row justify-content-between align-items-center">
 
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
             <img class="about-image" src="./assets/img/about.jpg" alt="A picture About us">
           </div>
 
-          <div class="col-lg-5">
+          <div class="col-lg-5" data-aos="fade-down" data-aos-delay="100">
 
             <div class="d-flex pt-4 mb-3">
               <div class="iconbox me-4">
@@ -218,7 +218,7 @@
 
         <div class="row">
 
-          <div class="col-12 text-center">
+          <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
             <div class="section-title">
               <h1 class="display-4 fw-semibold">Portafolio de Servicios</h1>
               <div class="section-title-line"></div>
@@ -229,7 +229,7 @@
           <div class="row text-center">
 
             <div class="col-lg-4 col-sm-6">
-              <div class="service-card box-shadow p-lg-5 p-4">
+              <div class="service-card box-shadow p-lg-5 p-4" data-aos="fade-down" data-aos-delay="50">
 
                 <div class="iconbox">
                   <i class="ri-pen-nib-fill"></i>
@@ -242,7 +242,7 @@
             </div>
 
 
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="100">
               <div class="service-card box-shadow p-lg-5 p-4">
 
                 <div class="iconbox">
@@ -255,7 +255,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
               <div class="service-card box-shadow p-lg-5 p-4">
 
                 <div class="iconbox">
@@ -268,7 +268,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="200">
               <div class="service-card box-shadow p-lg-5 p-4">
 
                 <div class="iconbox">
@@ -281,7 +281,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
               <div class="service-card box-shadow p-lg-5 p-4">
 
                 <div class="iconbox">
@@ -294,7 +294,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-6">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="300">
               <div class="service-card box-shadow p-lg-5 p-4">
 
                 <div class="iconbox">
@@ -324,15 +324,15 @@
     <section id="counter" class="counter">
       <div class="container text-center">
         <div class="row g-4">
-          <div class="col-sm-4">
+          <div class="col-sm-4" data-aos="fade-down" data-aos-delay="100">
             <h1 class="text-white display-4">100%</h1>
             <h6 class="text-uppercase mb-0 text-white mt-3">Excelencia y calidad</h6>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4" data-aos="fade-down" data-aos-delay="150">
             <h1 class="text-white display-4">500+</h1>
             <h6 class="text-uppercase mb-0 text-white mt-3">Proyectos Exitosos</h6>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4" data-aos="fade-down" data-aos-delay="200">
             <h1 class="text-white display-4">10+</h1>
             <h6 class="text-uppercase mb-0 text-white mt-3">Años de Experiencia</h6>
           </div>
@@ -346,7 +346,7 @@
       <div class="container">
         <!-- SECTION TITLE -->
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
             <div class="section-title">
               <h1 class="display-4 fw-semibold">Proyectos Recientes</h1>
               <div class="line"></div>
@@ -357,7 +357,7 @@
 
         <div class="row g-4">
 
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="100">
             <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/img/project-1.jpg" alt="">
@@ -374,7 +374,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="200">
             <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/img/project-3.jpg" alt="">
@@ -391,7 +391,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/img/project-5.jpg" alt="">
@@ -418,7 +418,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
             <div class="section-title">
               <h1 class="display-4 fw-semibold">Nuestros Clientes</h1>
               <div class="section-title-line"></div>
@@ -426,7 +426,7 @@
           </div>
         </div>
 
-        <div id="mainCarousel" class="carousel">
+        <div id="mainCarousel" class="carousel" data-aos="fade-down" data-aos-delay="50">
           <div class="carousel__slide">
             <img data-lazy-src="https://lipsum.app/id/1/1200x675" />
           </div>
