Feature: corrousel costumers logos

--- a/index.html
+++ b/index.html
@@ -428,19 +428,28 @@
 
         <div id="mainCarousel" class="carousel" data-aos="fade-down" data-aos-delay="100">
           <div class="carousel__slide">
-            <img data-lazy-src="https://lipsum.app/id/1/1200x675" />
+            <img data-lazy-src="./assets/img/Logo-Carlos-Nieto.png" />
           </div>
           <div class="carousel__slide">
-            <img data-lazy-src="https://lipsum.app/id/2/1200x675" />
+            <img data-lazy-src="./assets/img/Logo-Cole-Haan.png" />
           </div>
           <div class="carousel__slide">
-            <img data-lazy-src="https://lipsum.app/id/3/1200x675" />
+            <img data-lazy-src="./assets/img/Logo-Mimos.png" />
           </div>
           <div class="carousel__slide">
-            <img data-lazy-src="https://lipsum.app/id/4/1200x675" />
+            <img data-lazy-src="./assets/img/Logo-Desigual.png" />
           </div>
           <div class="carousel__slide">
-            <img data-lazy-src="https://lipsum.app/id/5/1200x675" />
+            <img data-lazy-src="./assets/img/Logo-Volkswagen.png" />
+          </div>
+          <div class="carousel__slide">
+            <img data-lazy-src="./assets/img/Logo-NutriLight.png" />
+          </div>
+          <div class="carousel__slide">
+            <img data-lazy-src="./assets/img/Logo-M3.png" />
+          </div>
+          <div class="carousel__slide">
+            <img data-lazy-src="./assets/img/Logo-Adidas.png" />
           </div>
         </div>
 
