Build: test deploy

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                 <div class="image-zoom-wrapper">
                                     <img src="./assets/img/project-1.jpg" alt="">
                                 </div>
-                                <a href="./assets/img/project-1.jpg" data-fancybox="gallery" class="iconbox">
+                                <a href="./assets/project-1.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
                                 </a>
                             </div>
@@ -307,7 +307,7 @@
                                 <div class="image-zoom-wrapper">
                                     <img src="./assets/img/project-2.jpg" alt="">
                                 </div>
-                                <a href="./assets/img/project-2.jpg" data-fancybox="gallery" class="iconbox">
+                                <a href="./assets/project-2.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
                                 </a>
                             </div>
@@ -317,7 +317,7 @@
                                 <div class="image-zoom-wrapper">
                                     <img src="./assets/img/project-3.jpg" alt="">
                                 </div>
-                                <a href="./assets/img/project-3.jpg" data-fancybox="gallery" class="iconbox">
+                                <a href="./assets/project-3.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
                                 </a>
                             </div>
@@ -325,7 +325,7 @@
                                 <div class="image-zoom-wrapper">
                                     <img src="./assets/img/project-4.jpg" alt="">
                                 </div>
-                                <a href="./assets/img/project-4.jpg" data-fancybox="gallery" class="iconbox">
+                                <a href="./assets/project-4.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
                                 </a>
                             </div>
@@ -335,7 +335,7 @@
                                 <div class="image-zoom-wrapper">
                                     <img src="./assets/img/project-5.jpg" alt="">
                                 </div>
-                                <a href="./assets/img/project-5.jpg" data-fancybox="gallery" class="iconbox">
+                                <a href="./assets/project-5.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
                                 </a>
                             </div>
@@ -343,7 +343,7 @@
                                 <div class="image-zoom-wrapper">
                                     <img src="./assets/img/project-6.jpg" alt="">
                                 </div>
-                                <a href="./assets/img/project-6.jpg" data-fancybox="gallery" class="iconbox">
+                                <a href="./assets/project-6.jpg" data-fancybox="gallery" class="iconbox">
                                     <i class="ri-search-2-line"></i>
                                 </a>
                             </div>
@@ -370,28 +370,28 @@
                         data-aos-delay="100"
                     >
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-Carlos-Nieto.png">
+                            <img data-lazy-src="./assets/Logo-Carlos-Nieto.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-Cole-Haan.png">
+                            <img data-lazy-src="./assets/Logo-Cole-Haan.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-Mimos.png">
+                            <img data-lazy-src="./assets/Logo-Mimos.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-Desigual.png">
+                            <img data-lazy-src="./assets/Logo-Desigual.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-Volkswagen.png">
+                            <img data-lazy-src="./assets/Logo-Volkswagen.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-NutriLight.png">
+                            <img data-lazy-src="./assets/Logo-NutriLight.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-M3.png">
+                            <img data-lazy-src="./assets/Logo-M3.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/img/Logo-Adidas.png">
+                            <img data-lazy-src="./assets/Logo-Adidas.png">
                         </div>
                     </div>
                 </div>
