Feature: fix image path for fancybox image elements

--- a/index.html
+++ b/index.html
@@ -370,28 +370,28 @@
                         data-aos-delay="100"
                     >
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-Carlos-Nieto.png">
+                            <img src="./assets/img/Logo-Carlos-Nieto.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-Cole-Haan.png">
+                            <img src="./assets/img/Logo-Cole-Haan.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-Mimos.png">
+                            <img src="./assets/img/Logo-Mimos.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-Desigual.png">
+                            <img src="./assets/img/Logo-Desigual.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-Volkswagen.png">
+                            <img src="./assets/img/Logo-Volkswagen.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-NutriLight.png">
+                            <img src="./assets/img/Logo-NutriLight.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-M3.png">
+                            <img src="./assets/img/Logo-M3.png">
                         </div>
                         <div class="carousel__slide">
-                            <img data-lazy-src="./assets/Logo-Adidas.png">
+                            <img src="./assets/img/Logo-Adidas.png">
                         </div>
                     </div>
                 </div>
