Feature: edit cards for services section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                             </div>
                             <div>
                                 <h5>NUESTRO COMPROMISO</h5>
-                                <p>Crear soluciones eficientes, enfocadas en el uso racional de la energía, priorizando el
+                                <p>Crear soluciones eficientes, enfocadas en el uso racional de la energía, priorizando
+                                    el
                                     cuidado de los recursos económicos, humanos y naturales.</p>
                             </div>
                         </div>
@@ -188,8 +189,6 @@
                                 </div>
                                 <!-- DISEÑO -->
                                 <h5 class="mt-4 mb-3">Diseño eléctrico residencial, comercial e Indusrial</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?
-                                </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="150">
@@ -199,8 +198,6 @@
                                 </div>
                                 <!-- CONSTRUCCION -->
                                 <h5 class="mt-4 mb-3">Construcción de instalaciones eléctricas</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?
-                                </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
@@ -208,10 +205,8 @@
                                 <div class="iconbox">
                                     <i class="ri-pen-nib-fill"></i>
                                 </div>
-                                <!-- Consultoria -->
+                                <!-- CONSULTORIA -->
                                 <h5 class="mt-4 mb-3">Construcción de instalaciones eléctricas</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?
-                                </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
@@ -221,8 +216,6 @@
                                 </div>
                                 <!-- ESTUDIOS -->
                                 <h5 class="mt-4 mb-3">Estudios eléctricos, análisis y mediciones</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?
-                                </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="450">
@@ -232,8 +225,6 @@
                                 </div>
                                 <!-- MANTENIMIENTO -->
                                 <h5 class="mt-4 mb-3">Mantenimiento de instalaciones y equipos</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?
-                                </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="550">
@@ -243,8 +234,6 @@
                                 </div>
                                 <!-- COMUNICACIONES -->
                                 <h5 class="mt-4 mb-3">Smart home, comunicaciones, seguridad y CCTV.</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?
-                                </p>
                             </div>
                         </div>
                     </div>
