Feature: content and styles for footer section

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer id="contact" class="bg-dark text-white py-4">
+    <footer id="contact" class="bg-dark text-white pt-5">
         <div class="footer-top mb-2">
             <div class="container">
                 <div class="row gy-5">
@@ -386,9 +386,8 @@
                     <div class="col-lg-3 col-sm-6">
                         <h5 class="mb-0">ROD CONSULTING</h5>
                         <div class="line"></div>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptatum ducimus est vel
-                            voluptates
+                        <p>Diseñamos y construimos instalaciones eléctricas a altura de los retos de ingeniera y cuidado
+                            del medio ambiente del siglo XXI
                         </p>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -419,8 +418,8 @@
                 <p class="mb-0">ROD Consulting Ingenieria Eléctrica © 2022</p>
             </div>
             <div class="container text-center">
-                <p class="mb-0">Web design By
-                    <a href="https://github.com/cmarioep">@cmarioep</a>
+                <p class="mb-0">Developed by
+                    <a href="https://www.cmarioep.com" target="_blank">@cmarioep</a>
                 </p>
             </div>
         </div>
