Edit: content on cards services

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                     <i class="ri-pen-nib-fill"></i>
                                 </div>
                                 <!-- CONSULTORIA -->
-                                <h5 class="mt-4 mb-3">Construcción de instalaciones eléctricas</h5>
+                                <h5 class="mt-4 mb-3">Consultoría técnica en Ingeniería eléctrica</h5>
                             </div>
                         </div>
                         <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
@@ -233,7 +233,7 @@
                                     <i class="ri-pen-nib-fill"></i>
                                 </div>
                                 <!-- COMUNICACIONES -->
-                                <h5 class="mt-4 mb-3">Smart home, comunicaciones, seguridad y CCTV.</h5>
+                                <h5 class="mt-4 mb-3">Domótica, comunicaciones, seguridad y CCTV.</h5>
                             </div>
                         </div>
                     </div>
