Edit: email contact info

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             </div>
                             <div class="col-md-9">
                                 <p class="m-0">Escríbenos</p>
-                                <a href="mailto:cotizaciones@rodconsulting.com">cotizaciones@rodconsulting.com.co</a>
+                                <a href="mailto:rafael.vallejo@rodconsulting.co">rafael.vallejo@rodconsulting.co</a>
                             </div>
                         </div>
                     </div>
@@ -419,7 +419,7 @@
                             <h5 class="mb-0">CONTACTO</h5>
                             <div class="line"></div>
                             <ul>
-                                <li><a href="mailto:cotizaciones@rodconsulting.com">cotizaciones@rodconsulting.com.co</a></li>
+                                <li><a href="mailto:rafael.vallejo@rodconsulting.co">rafael.vallejo@rodconsulting.co</a></li>
                                 <li><a class="m-0" href="tel:+573188737324">+57 3188737324</a></li>
                                 <li>www.rodconsulting.com.co</li>
                                 <li>Sabaneta - Antioquia</li>
